fluxo de frgmants adicionadp

--- a/tti2sdk/src/main/res/values/dimens.xml
+++ b/tti2sdk/src/main/res/values/dimens.xml
@@ -9,4 +9,8 @@
     <dimen name="fifteen_sp">15sp</dimen>
     <dimen name="sixteen_sp">16sp</dimen>
     <dimen name="twenty_four_sp">24sp</dimen>
+
+    <dimen name="tti_toolbar_height">56dp</dimen>
+
+
 </resources>
