--- a/tti2sdk/src/main/res/layout/fragment_missions.xml
+++ b/tti2sdk/src/main/res/layout/fragment_missions.xml
@@ -1,20 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/all_white" >
+    android:background="@color/gray_text"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/headerMissions"
+        layout="@layout/header_missions" />
+
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MissionsFragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical" >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+
+            <include
+                android:id="@+id/headerEvents"
+                layout="@layout/sub_header_event" />
+            <include
+                android:id="@+id/eventLineOne"
+                layout="@layout/item_line_event_one" />
+            <include
+                android:id="@+id/eventLineTwo"
+                layout="@layout/item_line_event_two" />
+
+
+
+            <include
+                android:id="@+id/headerDaily"
+                layout="@layout/sub_header_daily" />
+            <include
+                android:id="@+id/dailyLineOne"
+                layout="@layout/item_line_daily_one" />
+            <include
+                android:id="@+id/dailyLineTwo"
+                layout="@layout/item_line_daily_two" />
+            <include
+                android:id="@+id/dailyLineThree"
+                layout="@layout/item_line_daily_three" />
+            <include
+                android:id="@+id/dailyLineFour"
+                layout="@layout/item_line_daily_four" />
+
+
+
+            <include
+                android:id="@+id/headerProgress"
+                layout="@layout/sub_header_progress" />
+            <include
+                android:id="@+id/progressLineOne"
+                layout="@layout/item_line_progress_one" />
+
+
+
+            <include
+                android:id="@+id/headerBoosters"
+                layout="@layout/sub_header_boosters" />
+            <include
+                android:id="@+id/boostersLineOne"
+                layout="@layout/item_line_booster_one" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</LinearLayout>
