--- a/tti2sdk/src/main/res/layout/header_home.xml
+++ b/tti2sdk/src/main/res/layout/header_home.xml
@@ -10,7 +10,7 @@
     android:paddingBottom="8dp">
 
     <ImageView
-        android:id="@+id/iv_avatar"
+        android:id="@+id/ivAvatar"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="17dp"
@@ -32,7 +32,8 @@
         android:textColor="@color/black"
         android:textSize="@dimen/sixteen_sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/iv_avatar" />
+        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/team_avatar"
@@ -46,7 +47,7 @@
         android:text="Adventurer"
         android:textColor="@color/black"
         android:textSize="@dimen/fourteen_sp"
-        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
         app:layout_constraintTop_toBottomOf="@+id/nameAvatar" />
 
     <TextView
@@ -61,7 +62,7 @@
         android:text="Team Grand Palau"
         android:textColor="@color/black"
         android:textSize="@dimen/fourteen_sp"
-        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
         app:layout_constraintTop_toBottomOf="@+id/team_avatar" />
 
 
@@ -89,7 +90,7 @@
             android:paddingEnd="7dp"
             android:textColor="@color/black"
             android:textSize="@dimen/ten_sp"
-            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
             app:layout_constraintTop_toBottomOf="@+id/team_avatar" />
 
         <LinearLayout
@@ -107,7 +108,7 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/twenty_four_sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+                app:layout_constraintStart_toEndOf="@+id/ivAvatar"
                 tools:layout_editor_absoluteY="20dp" />
 
             <TextView
@@ -120,9 +121,11 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/sixteen_sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+                app:layout_constraintStart_toEndOf="@+id/ivAvatar"
                 tools:layout_editor_absoluteY="20dp" />
+
         </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
