--- a/tti2sdk/src/main/res/layout/sub_header_progress.xml
+++ b/tti2sdk/src/main/res/layout/sub_header_progress.xml
@@ -10,7 +10,7 @@
     android:paddingBottom="5dp">
 
     <TextView
-        android:id="@+id/iv_avatar"
+        android:id="@+id/ivAvatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
