--- a/tti2sdk/src/main/res/values/color.xml
+++ b/tti2sdk/src/main/res/values/color.xml
@@ -19,5 +19,6 @@
     <color name="red_default">#FF0025</color>
     <color name="brown_light">#CED6A2</color>
     <color name="background_btn_randomize">#F8F8F8</color>
+    <color name="background_gray">#F1F1F4</color>
 
 </resources>
