--- a/tti2sdk/src/main/res/drawable/background_rounded_btn_randomize.xml
+++ b/tti2sdk/src/main/res/drawable/background_rounded_btn_randomize.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#BFF8F8F8"/>
-
-    <stroke android:width="1dp" android:color="@color/black"/>
+    <solid android:color="@color/red_default"/>
+    <stroke android:width="0dp" android:color="@color/black"/>
 
     <corners
-        android:topLeftRadius="50dp"
-        android:topRightRadius="50dp"
-        android:bottomLeftRadius="50dp"
-        android:bottomRightRadius="50dp" />
+        android:topLeftRadius="75dp"
+        android:topRightRadius="75dp"
+        android:bottomLeftRadius="75dp"
+        android:bottomRightRadius="75dp" />
 
     <padding
         android:left="20dp"
