--- a/tti2sdk/src/main/res/layout/activity_avatar.xml
+++ b/tti2sdk/src/main/res/layout/activity_avatar.xml
@@ -1,109 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/all_white">
 
-<!--    &lt;!&ndash;    GIOVANI&ndash;&gt;-->
-<!--    &lt;!&ndash;    toolbar&ndash;&gt;-->
-<!--    &lt;!&ndash;    icon , texto, icon, icon &ndash;&gt;-->
-
-<!--    &lt;!&ndash;    container animado&ndash;&gt;-->
-<!--    &lt;!&ndash;    imageview&ndash;&gt;-->
-<!--    &lt;!&ndash;    botao randomizar&ndash;&gt;-->
-
-
-<!--    &lt;!&ndash;    FELIPPE&ndash;&gt;-->
-<!--    &lt;!&ndash;    construtor do avatar 1&ndash;&gt;-->
-<!--    &lt;!&ndash;    framelayout&ndash;&gt;-->
-<!--    &lt;!&ndash; fragment 1  HEAD     &ndash;&gt;-->
-<!--    &lt;!&ndash; fragment 2  SHOES    &ndash;&gt;-->
-<!--    &lt;!&ndash; fragment 3  CLOTHES     &ndash;&gt;-->
-<!--    &lt;!&ndash; fragment 4  RIDE     &ndash;&gt;-->
-
-<!--    &lt;!&ndash;    botao save avatar &ndash;&gt;-->
-<!--    &lt;!&ndash;    tabLayout + indicador de layout &ndash;&gt;-->
-
-    <ImageView
-        android:id="@+id/btnBackAvatar"
-        android:layout_width="wrap_content"
-        android:layout_height="?android:attr/actionBarSize"
-        android:layout_gravity="center"
-        android:clickable="true"
-        android:contentDescription="@string/img_content_description"
-        android:focusable="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:paddingHorizontal="20dp"
-        android:src="@drawable/ic_back_arrow"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtProfileLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/telkomsel_batik_sans_bold"
-        android:text="@string/txt_profile_label"
-        android:textColor="@color/blue_dark"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@id/btnBackAvatar"
-        app:layout_constraintEnd_toStartOf="@id/btnShareAvatar"
-        app:layout_constraintStart_toEndOf="@id/btnBackAvatar"
-        app:layout_constraintTop_toTopOf="@id/btnBackAvatar"/>
-
-    <ImageView
-        android:id="@+id/btnShareAvatar"
-        android:layout_width="wrap_content"
-        android:layout_height="?android:attr/actionBarSize"
-        android:layout_gravity="center"
-        android:clickable="true"
-        android:contentDescription="@string/img_content_description"
-        android:focusable="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:paddingHorizontal="20dp"
-        android:src="@drawable/ic_share"
-        app:layout_constraintEnd_toStartOf="@id/btnSaveAvatar"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/btnSaveAvatar"
-        android:layout_width="wrap_content"
-        android:layout_height="?android:attr/actionBarSize"
-        android:layout_gravity="center"
-        android:clickable="true"
-        android:contentDescription="@string/img_content_description"
-        android:focusable="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:paddingHorizontal="20dp"
-        android:src="@drawable/ic_save"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/avatarImage"
+   <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/loadingBox"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:layout_gravity="center"
-        android:padding="20dp"
+        android:layout_height="match_parent"
+        android:background="#34000000"
+        android:visibility="gone"
+        android:clickable="false"
+        android:elevation="10dp"
+        tools:visibility="visible">
+
+       <ProgressBar
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/progressBar"
+           app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           android:indeterminateTint="@color/red_default"
+           android:indeterminate="true"/>
+
+   </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/containerTopButtons"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnBackAvatar" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/btnBackAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:contentDescription="@string/img_content_description"
+            android:focusable="true"
+            android:paddingHorizontal="20dp"
+            android:src="@drawable/ic_back_arrow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtProfileLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/telkomsel_batik_sans_bold"
+            android:text="@string/txt_profile_label"
+            android:textColor="@color/blue_dark"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/btnBackAvatar"
+            app:layout_constraintEnd_toStartOf="@id/btnShareAvatar"
+            app:layout_constraintStart_toEndOf="@id/btnBackAvatar"
+            app:layout_constraintTop_toTopOf="@id/btnBackAvatar"/>
+
+        <ImageView
+            android:id="@+id/btnShareAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:contentDescription="@string/img_content_description"
+            android:focusable="true"
+            android:paddingHorizontal="20dp"
+            android:src="@drawable/ic_share"
+            app:layout_constraintEnd_toStartOf="@id/btnSaveAvatar"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/btnSaveAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:contentDescription="@string/img_content_description"
+            android:focusable="true"
+            android:paddingHorizontal="20dp"
+            android:src="@drawable/ic_save"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <app.rive.runtime.kotlin.RiveAnimationView
+        android:id="@+id/avatar"
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerTopButtons"
+        app:riveFit="FILL" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btnRandomize"
-        android:layout_width="180dp"
-        android:layout_height="38dp"
+        android:layout_width="240dp"
+        android:layout_height="32dp"
+        android:adjustViewBounds="true"
         android:background="@drawable/background_rounded_btn_randomize"
         android:clickable="true"
+        android:clipToPadding="false"
         android:elevation="8dp"
         android:focusable="true"
-        android:adjustViewBounds="true"
-        android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/avatarImage">
+        app:layout_constraintTop_toBottomOf="@id/avatar"
+        app:layout_constraintBottom_toBottomOf="@id/avatar">
 
         <ImageView
             android:id="@+id/imgRandomize"
@@ -116,14 +129,14 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/btnRandomizeLabel"
+            android:id="@+id/btnRandomizer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:text="@string/btn_randomize_label"
             android:textAllCaps="false"
-            android:textColor="@color/black"
+            android:textColor="@color/all_white"
             android:textSize="16sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgRandomize"
@@ -135,13 +148,12 @@
         android:id="@+id/containerFragments"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
         android:background="@color/background_gray"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/containerButtom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRandomize">
+        app:layout_constraintTop_toBottomOf="@+id/avatar">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
@@ -168,18 +180,20 @@
             android:id="@+id/btnSaveChanges"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="@dimen/sixteen_sp"
-            android:text="@string/save_changes"
-            android:textColor="@color/all_white"
-            android:textAllCaps="false"
-            android:fontFamily="@font/poppins_bold"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
             android:layout_marginStart="25dp"
             android:layout_marginLeft="25dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="25dp"
             android:layout_marginRight="25dp"
-            android:background="@drawable/background_red_buttom_arrounded"/>
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/background_red_buttom_arrounded"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/save_changes"
+            android:textAllCaps="false"
+            android:textColor="@color/all_white"
+            android:textSize="@dimen/sixteen_sp"/>
 
     </LinearLayout>
 
@@ -201,6 +215,5 @@
             app:tabIndicatorHeight="0dp"  />
 
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
