list avatar all tabs

--- a/tti2sdk/src/main/res/layout/fragment_clothes.xml
+++ b/tti2sdk/src/main/res/layout/fragment_clothes.xml
@@ -12,7 +12,7 @@
         android:background="@color/background_gray" >
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/textViewNameListTop"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -21,25 +21,26 @@
             android:text="@string/top"
             android:textColor="@color/black"
             android:textSize="@dimen/sixteen_sp"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewTop"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text"
-            tools:listitem="@layout/item_list_avatar_unselected" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewNameListTop"
+            tools:listitem="@layout/item_list_avatar" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewTopColor"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -47,7 +48,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewTop"
-            tools:listitem="@layout/item_list_avatar_unselected" />
+            tools:listitem="@layout/item_list_avatar" />
 
         <TextView
             android:id="@+id/textBottoms"
@@ -60,13 +61,14 @@
             android:text="@string/bottoms"
             android:textColor="@color/black"
             android:textSize="@dimen/sixteen_sp"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewTopColor" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewBottoms"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -74,11 +76,11 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textBottoms"
-            tools:listitem="@layout/item_list_avatar_prof_unselected" />
+            tools:listitem="@layout/item_list_avatar" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewBottomsColor"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="LinearLayoutManager"
@@ -86,7 +88,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewBottoms"
-            tools:listitem="@layout/item_list_avatar_prof_unselected" />
+            tools:listitem="@layout/item_list_avatar" />
 
         <View
             android:layout_width="10dp"
