--- a/tti2sdk/src/main/res/layout/item_list_avatar.xml
+++ b/tti2sdk/src/main/res/layout/item_list_avatar.xml
@@ -3,23 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
+    android:layout_width="140dp"
     android:layout_height="160dp"
-    android:background="@color/all_white" >
+    android:background="@null"
+    android:layout_margin="5dp">
 
     <View
-        android:id="@+id/daily_four_background"
+        android:id="@+id/backgroundItemListAvatar"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/bck_item_list_avatar_unselected"
-        app:layout_constraintBottom_toTopOf="@+id/textViewAvatarUnselected"
+        android:background="@drawable/bck_item_list_avatar_selected"
+        app:layout_constraintBottom_toTopOf="@+id/textViewAvatarSelected"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageViewItemAvatarUnselected"
+        android:id="@+id/imageViewItemAvatarSelected"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
@@ -28,24 +29,22 @@
         android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:weightSum="5"
-        app:layout_constraintBottom_toBottomOf="@+id/daily_four_background"
-        app:layout_constraintEnd_toEndOf="@+id/daily_four_background"
-        app:layout_constraintStart_toStartOf="@+id/daily_four_background"
+        app:layout_constraintBottom_toBottomOf="@+id/backgroundItemListAvatar"
+        app:layout_constraintEnd_toEndOf="@+id/backgroundItemListAvatar"
+        app:layout_constraintStart_toStartOf="@+id/backgroundItemListAvatar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewAvatarUnselected"
-        android:layout_width="0dp"
+        android:id="@+id/textViewAvatarSelected"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_bold"
-        android:paddingEnd="40dp"
-        android:paddingBottom="0dp"
+        android:lines="1"
         android:textAlignment="center"
-        android:textColor="@color/all_white"
+        android:textColor="@color/black"
         android:textSize="@dimen/fifteen_sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Lololol" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
