--- a/tti2sdk/src/main/res/layout/fragment_head.xml
+++ b/tti2sdk/src/main/res/layout/fragment_head.xml
@@ -50,6 +50,7 @@
             android:maxLines="1"
             android:textColor="@color/gray_text_list"
             android:textSize="@dimen/ten_sp"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextName"
             tools:text="0/0" />
