--- a/tti2sdk/src/main/res/layout/item_line_daily_one.xml
+++ b/tti2sdk/src/main/res/layout/item_line_daily_one.xml
@@ -5,7 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/all_white" >
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@color/all_white"
+    android:layout_marginStart="2dp"
+    android:layout_marginEnd="2dp">
 
     <View
         android:id="@+id/daily_one_background"
@@ -54,6 +58,7 @@
         android:textSize="@dimen/fifteen_sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:text="Daily"
         tools:text="Daily"/>
 
     <TextView
@@ -72,6 +77,7 @@
         app:layout_constraintEnd_toStartOf="@+id/daily_one_icon_pros_text"
         app:layout_constraintStart_toEndOf="@+id/daily_one_icon_pre_text"
         app:layout_constraintTop_toBottomOf="@+id/daily_one_container_mark"
+        android:text="12 Days of Christmas"
         tools:text="12 Days of Christmas" />
 
     <TextView
@@ -125,6 +131,7 @@
         app:layout_constraintEnd_toStartOf="@+id/daily_one_icon_pros_text"
         app:layout_constraintStart_toStartOf="@+id/daily_one_title_box"
         app:layout_constraintTop_toBottomOf="@+id/daily_one_title_box"
+        android:text="12 Days of Christmas 12 Days of Christmas 12 Days of Christmas 12 Days of Christmas 12 Days of Christmas 12 Days of Christmas"
         tools:text="12 Days of Christmas 12 Days of Christmas 12 Days of Christmas 12 Days of Christmas 12 Days of Christmas 12 Days of Christmas" />
 
     <TextView
@@ -143,6 +150,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/text_elipsed"
         app:layout_constraintTop_toTopOf="@+id/text_elipsed"
+        android:text="km"
         tools:text="km" />
 
     <View
