--- a/tti2sdk/src/main/res/drawable/background_rounded_btn_randomize.xml
+++ b/tti2sdk/src/main/res/drawable/background_rounded_btn_randomize.xml
@@ -1,19 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
 
-    <solid android:color="@color/red_default"/>
-    <stroke android:width="0dp" android:color="@color/black"/>
+    <item>
+        <!-- Shadow -->
+        <shape>
+            <!-- set the shadow color here -->
+            <stroke
+                android:width="2dp"
+                android:color="#7000" />
 
-    <corners
-        android:topLeftRadius="75dp"
-        android:topRightRadius="75dp"
-        android:bottomLeftRadius="75dp"
-        android:bottomRightRadius="75dp" />
+            <!-- setting the thickness of shadow (positive value will give shadow on that side) -->
 
-    <padding
-        android:left="20dp"
-        android:top="0dp"
-        android:right="10dp"
-        android:bottom="0dp" />
+            <corners
+                android:topLeftRadius="75dp"
+                android:topRightRadius="75dp"
+                android:bottomLeftRadius="75dp"
+                android:bottomRightRadius="75dp" />
 
-</shape>
+            <padding
+                android:bottom="2dp"
+                android:left="-1dp"
+                android:right="-1dp"
+                android:top="-2dp" />
+
+        </shape>
+    </item>
+
+    <item>
+        <!-- Background -->
+        <shape>
+
+            <solid android:color="@color/background_btn_randomize"/>
+            <stroke android:width="0dp" android:color="@color/background_btn_randomize"/>
+
+            <corners
+                android:topLeftRadius="75dp"
+                android:topRightRadius="75dp"
+                android:bottomLeftRadius="75dp"
+                android:bottomRightRadius="75dp" />
+
+            <padding
+                android:left="20dp"
+                android:top="0dp"
+                android:right="10dp"
+                android:bottom="0dp" />
+
+        </shape>
+    </item>
+
+</layer-list>
