--- a/tti2sdk/src/main/res/layout/item_list_avatar_generic.xml
+++ b/tti2sdk/src/main/res/layout/item_list_avatar_generic.xml
@@ -8,6 +8,20 @@
     android:background="@null"
     android:layout_margin="5dp">
 
+    <include
+        android:id="@+id/progressBarItemCuston"
+        layout="@layout/loading_default"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/backgroundItemListGeneric"
         android:layout_width="0dp"
