--- a/tti2sdk/src/main/res/layout/item_list_avatar_generic.xml
+++ b/tti2sdk/src/main/res/layout/item_list_avatar_generic.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/progressBarItemCuston"
-        layout="@layout/loading_default"
+        layout="@layout/loading_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
